Unit Tests and spotless apply
- TextSimilarityTranslator unit tests for batch process input and output.
- old MLEngine constructor marked as deprecated
- `spotlessApply` applied

Signed-off-by: Michael <urmich.m@gmail.com>